@@ -3,6 +3,9 @@
 
 * Fixed single instance options cleanup that might affect next call.
 
+* Fixed wrong update of status text after folder update when there are
+    selected files in the folder.
+
 
 Changes on 1.2.3 since 1.2.2:
 
